--- a/application/templates/success.html
+++ b/application/templates/success.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="stylesheet" href="../styles/success.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/success.css') }}">
 </head>
 <body>
     <div class="top_nav">
@@ -13,28 +13,28 @@
     </div>
     <div class="mid_nav">
         <div>
-            <img src="../images/logo.png" alt="" class="logo">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" class="logo">
         </div>
         <div>
             <ul class="pages">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="">Offices</a></li>
                 <li><a href="">Our Purpose</a></li>
             </ul>
         </div>
     </div>
     <div class="success">
-        <h2>You're message has been successfully sent</h2>
+        <h2>Your message has been successfully sent</h2>
         <div>
-            <button>Ok</button>
+            <button onclick="window.location.href='/'">Ok</button> 
         </div>
     </div>
 
     <div class="footer">
-        <img src="../images/logo.png" alt="" class="logo">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" class="logo">
         <div class="footer_nav">
-            <a href="index.html">Home</a>
-            <a href="view_more.html">Offices</a>
+            <a href="/">Home</a>
+            <a href="/view_more">Offices</a>
             <a href="">Our Purpose</a>
         </div>
     </div>
