--- a/application/templates/view_more.html
+++ b/application/templates/view_more.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View_more</title>
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="stylesheet" href="../styles/view_more.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/styles.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/view_more.css')}}">
 </head>
 <body>
     <div class="top_nav">
@@ -13,11 +13,11 @@
     </div>
     <div class="mid_nav">
         <div>
-            <img src="../images/logo.png" alt="" class="logo">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" class="logo">
         </div>
         <div>
             <ul class="pages">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="">Offices</a></li>
                 <li><a href="">Our Purpose</a></li>
             </ul>
@@ -25,7 +25,8 @@
     </div>
     <h1 class="head_text">Office of the VC</h1>
 <div class="view_img_case">
-    <img src="../images/himiiiiii.png" alt="" class="view_img">
+    
+    <img src="{{ url_for('static', filename='images/himiiiiii.png') }}" alt="" class="view_img">
 </div>    
 <h2 class="name">Rev.Hiencent Injokwue</h2>
 
@@ -35,10 +36,10 @@
     <div><button class="send">Send</button></div>
 </div>
 <div class="footer">
-    <img src="../images/logo.png" alt="" class="logo">
+    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" class="view_img">
     <div class="footer_nav">
-        <a href="index.html">Home</a>
-        <a href="view_more.html">Offices</a>
+        <a href="/">Home</a>
+        <a href="/view_more">Offices</a>
         <a href="">Our Purpose</a>
     </div>
 </div>
