--- a/application/static/styles/view_more.css
+++ b/application/static/styles/view_more.css
@@ -11,6 +11,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+}
+.share{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .view_img{
     height: 300px;
@@ -20,15 +28,33 @@ body{
 .name{
     text-align: center;
 }
-.share{
+.input_case{
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: right;
+    gap: 10px;
+}
+.input_case label{
+    color: #134b70;
+    font-size: 20px;
+    font-weight: 500;
+}
+.input_case input{
+    padding: 15px;
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    border: none;
+    cursor: text
 }
 .message{
-    width: 90%;
+    width: 100%;
     height: 250px;
+    border-radius: 5px;
+    border: none;
+    cursor: text
 }
 .send{
     margin: 20px 0;
