--- a/application/templates/view_more.html
+++ b/application/templates/view_more.html
@@ -57,10 +57,11 @@
     </div>
 </div>
 <div class="footer_bottom">
-    <span>&copy; 2024 Veritas University Abuja Nigeria</span>
+    <span>&copy; 2025 Veritas University Abuja Nigeria</span>
 </div>
 <div class="footer_bottom2">
     <span>Made with &hearts; By Zomie</span>
 </div>
+<script src="{{url_for('static', filename='script/view_more.js')}}"></script>
 </body>
 </html>
