i made some changes

--- a/application/templates/view_more.html
+++ b/application/templates/view_more.html
@@ -34,12 +34,12 @@
     <h1 class="head_text">Share Your Concerns</h1>
     <div class="input_case">
         <label for="Name">Name:</label>
-        <input type="text" name="name" id="name" placeholder="Enter your name">
+        <input type="text" name="name" id="name" placeholder="Enter your name (Optional)">
     </div>
 
     <div class="input_case">
         <label for="matric_number">Matric Number:</label>
-        <input type="text" name="name" id="name" placeholder="Enter your Matric Number">
+        <input type="text" name="name" id="name" placeholder="Enter your Matric Number (Optional)">
     </div>
 
     <div class="input_case">
