--- a/application/templates/view_more.html
+++ b/application/templates/view_more.html
@@ -25,7 +25,7 @@
     </div>
     <h1 class="head_text">Office of the VC</h1>
 <div class="view_img_case">
-    <img src="{{ url_for('static', filename='images/himiiiiii.png') }}" alt="" class="view_img">
+    <img src="{{ url_for('static', filename='images/blockB.jpeg') }}" alt="" class="view_img">
 </div>    
 <h2 class="name">Rev.Hiencent Injokwue</h2>
 
