--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -209,72 +209,7 @@
     </div>
     
     <div class="offices">
-        <div class="office">
-            <img src="{{url_for('static', filename='images/vice_chancellor.jpg')}}" alt=""> 
-            <div class="office_info">
-                <span>Rev. Fr. Prof. Hycinth E Ichoku</span>
-                <p>Office of the VC</p>
-            </div>
-            <div class="view">
-                <button class="view_btn">View more</button>
-            </div>
-        </div>
-
-        <div class="office">
-            <img src="{{url_for('static', filename='images/sasa.jpg')}}" alt="">
-            <div class="office_info">
-                <span>Rev. Prof. Sasa Michael Sunday</span>
-                <p>Office of the Deputy VC</p>
-            </div>
-            <div class="view">
-                <button class="view_btn">View more</button>
-            </div>
-        </div>
-
-        <div class="office">
-            <img src="{{url_for('static', filename='images/registrar.png')}}" alt="">
-            <div class="office_info">
-                <span>Dr. Stella Chizoba Okonkwo</span>
-                <p>Office of the Register</p>
-            </div>
-            <div class="view">
-                <button class="view_btn">View more</button>
-            </div>
-        </div>
-
-        <div class="office">
-            <img src="{{url_for('static', filename='images/himiiiiii.png')}}" alt="">
-            <div class="office_info">
-                <span>Rev.Mary Micheal</span>
-                <p>Office of the Dean of Student Affairs</p>
-            </div>
-            <div class="view">
-                <button class="view_btn">View more</button>
-            </div>
-        </div>
-
-        <div class="office">
-            <img src="{{url_for('static', filename='images/bursar.jpg')}}" alt="">
-            <div class="office_info">
-                <span>Mrs. Margaret Ejima Akoje</span>
-                <p>Office of the Busar</p>
-            </div>
-            <div class="view">
-                <button class="view_btn">View more</button>
-            </div>
-        </div>
-
-
-        <div class="office">
-            <img src="{{url_for('static', filename='images/Sra.jpeg')}}" alt="">
-            <div class="office_info">
-                <span>SRA</span>
-                <p>Office of the SRA</p>
-            </div>
-            <div class="view">
-                <button class="view_btn">View more</button>
-            </div>
-        </div>
+    /*offices*/
     </div>
 
     <div id="purpose" class="head_text">
