i fixed the success navigation

--- a/application/templates/success.html
+++ b/application/templates/success.html
@@ -18,8 +18,8 @@
         <div>
             <ul class="pages">
                 <li><a href="/">Home</a></li>
-                <li><a href="">Offices</a></li>
-                <li><a href="">Our Purpose</a></li>
+                <li><a href="/#offices">Offices</a></li>
+                <li><a href="/#purpose">Our Purpose</a></li>
             </ul>
         </div>
     </div>
@@ -34,8 +34,8 @@
         <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" class="logo">
         <div class="footer_nav">
             <a href="/">Home</a>
-            <a href="/view_more">Offices</a>
-            <a href="">Our Purpose</a>
+            <a href="/#offices">Offices</a>
+            <a href="/#purpose">Our Purpose</a>
         </div>
     </div>
     <div class="footer_bottom">
