--- a/application/templates/view_more.html
+++ b/application/templates/view_more.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View_more</title>
+    <title>View more</title>
+    <link rel="icon" href="{{ url_for('static', filename='images/logo.png') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/styles.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='styles/view_more.css')}}">
 </head>
