i made all the input feilds compulsory on the message page

--- a/application/templates/view_more.html
+++ b/application/templates/view_more.html
@@ -35,12 +35,12 @@
     
     <div class="input_case">
         <label for="name">Name:</label>
-        <input type="text" name="name" id="name" placeholder="Enter your name (Optional)">
+        <input type="text" name="name" id="name" placeholder="Enter your name">
     </div>
 
     <div class="input_case">
         <label for="matric_number">Matric Number:</label>
-        <input type="text" name="matric_number" id="matric_number" placeholder="Enter your Matric Number (Optional)">
+        <input type="text" name="matric_number" id="matric_number" placeholder="Enter your Matric Number">
     </div>
 
     <div class="input_case">
